--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -74,3 +74,13 @@
 .btn-login:hover {
     background-color: #6aa7ee;
 }
+
+.register-link {
+    color: #0d6efd;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.register-link:hover {
+    text-decoration: underline;
+}
