--- a/assets/css/account.css
+++ b/assets/css/account.css
@@ -254,3 +254,60 @@
     transform:translateY(-1px);
     text-align: center;
 }
+
+
+.order-tracking {
+    border: 3px solid red !important;
+    min-height: 80px;
+    padding: 10px;
+}
+
+
+.tracking-steps {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.step {
+    text-align: center;
+    flex: 1;
+    position: relative;
+}
+
+.step:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    top: 18px;
+    right: -50%;
+    width: 100%;
+    height: 4px;
+    background: #ddd;
+    z-index: 0;
+}
+
+.step.active:not(:last-child)::after {
+    background: #dc3545;
+}
+
+.circle {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background: #ddd;
+    color: #fff;
+    line-height: 36px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 1;
+    font-weight: bold;
+}
+
+.step.active .circle {
+    background: #dc3545;
+}
+
+.label {
+    margin-top: 8px;
+    font-size: 13px;
+}
