--- a/assets/css/admin-user.css
+++ b/assets/css/admin-user.css
@@ -1,3 +1,4 @@
+body { font-family: "Segoe UI"; padding: 20px; font-size: 16px; }
 /* ===== ROLE SELECT ===== */
 .role-select {
     font-weight: 600;
