--- a/assets/css/coupon.css
+++ b/assets/css/coupon.css
@@ -85,15 +85,22 @@ body { font-family: "Segoe UI"; padding: 20px; font-size: 16px; }
 
 /* ADD */
 .btn-add {
-    padding: 12px 30px; /* Làm nút bự ra */
-    font-size: 18px;
-    border-radius: 12px;
-    box-shadow: 0 4px 15px rgba(19, 80, 113, 0.3);
-    margin-top: 10px;
-    margin-bottom: 10px;
+    display: inline-block;
+    background-color: #1A3D64;
+    color: #ffffff !important;
+    padding: 12px 25px;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 10px;
+    text-decoration: none;
+    margin-bottom: 20px;
+    transition: all 0.3s ease;
+    border: none;
+    box-shadow: 0 4px 10px rgba(26, 61, 100, 0.2);
 }
 .btn-add:hover {
-    background: #0d3a54;
+    background-color: #14304d;
+    transform: translateY(-2px);
 }
 
 /* EDIT */
@@ -105,6 +112,8 @@ body { font-family: "Segoe UI"; padding: 20px; font-size: 16px; }
     padding: 6px 14px;
     border: none;
     transition: all .25s ease;
+    padding: 10px 18px;
+    font-size: 16px;
 }
 .btn-edit:hover {
     background: #1558b0;
@@ -115,10 +124,12 @@ body { font-family: "Segoe UI"; padding: 20px; font-size: 16px; }
     background: #d32f2f;
     color: #fff;
     font-weight: 600;
+    font-size: 16px;
     border-radius: 10px;
     padding: 6px 14px;
     border: none;
     transition: all .25s ease;
+    padding: 10px 18px;
 }
 .btn-delete:hover {
     background: #b71c1c;
